force-app/main/default/objects/Delegated_Renewed_Entitlement__c/Delegated_Renewed_Entitlement__c.object-meta.xml
<CustomObject>
    <description>This is junction object created to populate related linked entitlements of renewal opportunity...</description>
    <label>Associated Entitlements</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>