force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Entitlements</description>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Associated Entitlements</relationshipLabel>
    <relationshipName>Delegated_Renewed_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>