force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Associated Entitlements</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>