force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <description>Associated Entitlements</description>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Associated Entitlements</relationshipLabel>
    <relationshipName>Delegated_Renewed_Entitlements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>