force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Associated Entitlements</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Associated Entitlements</relationshipLabel>
    <relationshipName>Delegated_Renewed_Entitlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>