force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Entitlements</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Associated Entitlements</relationshipLabel>
    <relationshipName>Delegated_Renewed_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>