force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Entitlements</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Associated Entitlements</relationshipLabel>
    <relationshipName>Delegated_Renewed_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>