force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Entitlements</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Associated Entitlements</relationshipLabel>
    <relationshipName>Delegated_Renewed_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>