force-app/main/default/objects/Delegated_Renewed_Entitlement__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Associated Entitlements</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>